--- a/index.html
+++ b/index.html
@@ -7,25 +7,83 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <img src="./images/logo.jpg" alt="Logo" class="logo">
+    <nav>
+        <ul>
+                <li class="li-nav">                   
+                    <a class="nav-link" href="#" >Home</a>
+                </li>            
+                <li class="li-nav">                    
+                    <a class="nav-link" href="./pages/quienesSomos.html">Quienes Somos</a>
+                </li>                                
+                <li class="li-nav">    
+                    <a class="nav-link" href="./pages/proyectosActuales.html">Proyectos Actuales</a>
+                </li>
+                <li class="li-nav">    
+                    <a class="nav-link" href="./pages/educacionAmbiental.html">Educacion Ambiental</a>
+                </li>
+                <li class="li-nav">    
+                    <a class="nav-link" href="./pages/voluntariado.html">Voluntariado</a>
+                </li>
+                 <li class="li-nav">    
+                    <a class="nav-link" href="./pages/donaciones.html">Donaciones</a>
+                </li>
+        </ul>
+    </nav>
+</header>
+ 
 
-    <main>
-            
+<main>
+<!-- TENEMOS QUE UNIR CON section las diversas partes del codigo para que tengan ssentido -->
+    <h1>Somos Pulmon Natural</h1>
+    <section class="main-section"> 
+        <h2>Bienvenidos</h2>
+            <article>
+                <p>
+                    Somos una organizaciion sin fines de lucro dedicada a proteger ecosistemas     naturales y promover la conciencia ambiental en las comunidades. Creemos que cada   arbol, cada rio y cada vida cuenta
+                </p>
+            </article>
+    </section>
+    <section> 
+        <article class="fondo-articulo">
+            <h2>Nuestra Mision</h2>
+                <p class="p-central">
+                    Queremos poder proteger, restaurar y conservar los espacios naturales a traves de   la    educacion ambiental, la accion comunitaria y proyectos sostenibles que  fortalezcan el  vinculo entre las personas y la naturaleza
+                </p>
+        </article>
+    </section>    
+    <section>
+        <article>
+            <h2>Nuestra Vision</h2>
+            <p class="p-final">
+                Ser una organizacion reconocida por su impacto positivo en la regeneracion del medio    ambiente y por empoderar a las comunidades para convertirse en agentes activos del     cambio ecologico
+            </p>
+        </article>
 
-    </main>
+    </section>
+    <section>
+        <article>
+            <h2>Proyeccion a Futuro</h2>
+                <p>
+                    En Pulmon Natural imaginamos un futuro donde las ciudades esten protegidas con  espacios verdes saludables, donde la educacion ambiental sea parte del dia a dia y   donde cada persona actue con responsabilidad ecologica. Aspiramos a expandir  nuestros programas a nivel regional y convertirnos en modelo replicable de   sostenibilidad comunitaria 
 
-    <footer>
 
+                </p>
+    
+        </article>
 
-    </footer>
+    </section>
+    <a id="link-interno" href="./pages/donaciones.html" target="_blank"> Nos queres ayudar?</a>
+      <a id="link-externo" href="./pages/voluntariado.html" target="_blank"> Te queres sumar?</a>
+<!-- Con el target blank pasamos a una nueva pestaña y el usuario se queda en la pagina -->
+</main>
+<footer>
+    <div>
+        <p>TODOS LOS DERECHOS RESERVADOS  2025 </p>
+    </div>   
+</footer>
 </body>
 </html>
+
+
