--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
+    <!-- link de prueba  -->
+        <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
+
+
     <title>Document</title>
 </head>
 <body>
@@ -76,6 +83,17 @@
     </section>
     <a id="link-interno" href="./pages/donaciones.html" target="_blank"> Nos queres ayudar?</a>
       <a id="link-externo" href="./pages/voluntariado.html" target="_blank"> Te queres sumar?</a>
+
+
+    <section>
+        <h1>Pruebas</h1>
+        <details>
+                <summary>Ver más</summary>
+                <div class=" animate__animated animate__fadeIn">
+                <p>Este es el contenido oculto que se despliega al hacer clic. Puede contener texto, imágenes, listas o lo que necesites.</p>
+                </div>
+        </details>
+    </section>
 <!-- Con el target blank pasamos a una nueva pestaña y el usuario se queda en la pagina -->
 </main>
 <footer>
