--- a/pages/educacionAmbiental.html
+++ b/pages/educacionAmbiental.html
@@ -94,7 +94,28 @@
             </li>
         </ul>
     </section>
+    <section>
+        <div class="inversiones">
+            <article>
+                <h1>Comunicación para el Cambio Ambiental</h1>
+                <strong>Aprendé a contar historias poderosas que inspiren acción y movilicen a tu comunidad.</strong>
+                <h2>Objetivos</h2>
+                    <ul>
+                        <li>
+                            Dotar a los participantes de herramientas de storytelling para transformar datos duros y problemas complejos en narrativas humanas y emocionantes.
+                        </li>
+                        <li> 
+                            Enseñar estrategias de comunicación digital para campañas de concientización y recaudación de fondos.
+                        </li>
+                        <li>
+                            Capacitar en el manejo de la comunicación en situaciones de crisis o conflicto socioambiental.
+                        </li>
+                    </ul>
+            </article>
 
+        </div>
+        
+    </section>
 
 
     <section>
