--- a/pages/proyectosActuales.html
+++ b/pages/proyectosActuales.html
@@ -111,6 +111,35 @@
         </article>
     </section>
     <section>
+        <h2>Guardianes del Aire</h2>
+        <article>
+            <p>
+                <strong> Objetivo:</strong>  Crear una red ciudadana de monitoreo de calidad del aire para generar datos abiertos y exigir políticas públicas que protejan la salud respiratoria de la comunidad.
+            </p>
+            <p>
+                <strong>Descripcion:</strong> La contaminación del aire es un enemigo invisible que causa graves enfermedades, pero sin datos precisos es difícil combatirla. Por eso, instalamos sensores de bajo costo en escuelas, centros comunitarios y hogares de voluntarios para medir la contaminación en tiempo real. Capacitamos a los vecinos como "Guardianes" para que mantengan los equipos y entiendan la información, la cual se publica en un mapa online accesible para todos. Con estos datos veraces, elaboramos informes y presentamos denuncias fundamentadas para presionar por un aire más limpio.
+            </p>
+            <p>
+                <strong>Ubicacion:</strong> Dock Sud / Polo Petroquímico (Avellaneda) y barrios cercanos a autopistas en CABA.
+            </p>
+        </article>
+    </section>
+    <section>
+        <h2> Energía Nuestra</h2>
+        <article>
+            <p>
+                <strong> Objetivo:</strong>  Promover el acceso a energías renovables y la eficiencia energética en hogares y centros comunitarios de barrios populares.
+            </p>
+            <p>
+                <strong>Descripcion:</strong>  El alto costo de la energía convencional golpea más fuerte a las familias de bajos ingresos. Este proyecto busca darles soberanía y un respiro económico y ambiental. Realizamos talleres prácticos donde los vecinos aprenden a construir y usar cocinas y hornos solares con materiales de bajo costo. También instalamos termotanques solares en comedores y centros comunitarios para demostrar su eficacia y generar un ahorro real, mientras capacitamos sobre eficiencia energética para reducir el consumo general.
+            </p>
+            <p>
+                <strong>Ubicacion:</strong> Quilmes, La Matanza, Zona Sur/Oeste, Buenos Aires.
+            </p>
+            
+        </article>
+    </section>
+    <section>
             <h2>Queres sumarte?</h2>
             <p>
                 Muchos de nuestros proyectos estan abiertos a voluntarios. Visita la seccion de <a href="./voluntariado.html">Voluntarios</a> o escribinos a proyectos@pulmonnatural.org para colaborar
