--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -59,6 +59,7 @@
                 <strong> Fomentar el voluntariado ambiental como forma ciudadana </strong>            
            </li>
         </ul>
+    </section>   
     <section>
       <h2>Nuestro equipo</h2>
       <article>
@@ -75,6 +76,38 @@
         <p>
             Te invitamos a seguirnos en redes sociales, visitarnos a nuestras actividades o ecribirnos a contacto@pulmonnatural.org
         </p>
+    </section>
+    <section>
+        <div class="testimonios">
+            <img src="" alt="foto-de-voluntario">
+            <h1>Lucía (Traductora)</h1>
+                <p>
+                    <strong> "Hablo tres idiomas, y gracias a Pulmón Natural, descubrí que el lenguaje más universal es el de la supervivencia."</strong>
+                </p>
+                <p>
+                    Soy Lucía, traductora. Trabajé años en el mundo corporativo, pero sentía que me faltaba un propósito. Al unirme a Pulmón Natural, traduje investigaciones ambientales, como el uso de pesticidas prohibidos, para presentarlas ante la ONU. Me convertí en un puente entre ONGs de diferentes continentes, traduciendo en tiempo real estrategias y logros. También colaboré en “Voces del Planeta”, ayudando a que líderes indígenas compartieran su mensaje en foros internacionales. Descubrí que mis palabras podían tener impacto real. Ahora traduzco para defender derechos y conectar luchas globales. Pulmón Natural me ayudó a encontrar un propósito alineado con mis valores.
+                </p>
+        </div>
+        <div class="testimonios">
+            <img src="" alt="foto-de-voluntario">
+            <h1>Mateo (Estudiante de Biología)</h1>
+                <p>
+                    <strong>"Creía que la ciencia era solo para los laboratorios. Pulmón Natural me llevó al corazón del problema."</strong>
+                </p>
+                <p>
+                    Soy Mateo, estudiante de biología. Siempre amé la ciencia, pero veía el activismo como poco riguroso. Entré a Pulmón Natural buscando créditos y terminé midiendo la contaminación en barrios olvidados. Tomábamos muestras, hablábamos con familias afectadas y cruzábamos datos con estadísticas de salud. Aprendí a documentar todo con precisión y a traducir resultados técnicos en mensajes comprensibles. Un informe que ayudé a redactar fue clave para que un tribunal exigiera filtros a una fábrica contaminante. Esa victoria me cambió. Ahora quiero usar la ciencia para la justicia ambiental, porque entendí que los datos también pueden salvar vidas si se usan bien.
+                </p>
+        </div>
+        <div class="testimonios">
+            <img src="" alt="foto-de-voluntario">
+            <h1>Sofía (Vecina del barrio):</h1>
+                <p>
+                    <strong>"Solía pensar que el medio ambiente era algo lejano, de los osos polares. Ahora sé que es el aire que respira mi nieto."</strong>
+                </p>
+                <p>
+                    Soy Sofía, vecina de toda la vida. Durante años, un basural clandestino nos enfermaba y nadie nos escuchaba. Pulmón Natural llegó diferente: vinieron a escuchar. En vez de imponer soluciones, propusieron transformar el basural en un parque. Aprendimos compostaje, separación de residuos y huertas. Junto a los voluntarios, limpiamos, plantamos árboles, construimos juegos con reciclado y aprendimos a analizar el suelo. Hoy, ese espacio es el corazón del barrio. Mi nieto mejoró de sus bronquitis y yo soy "Guardiana del Parque". Aprendí que cuidar el ambiente es cuidar la vida. Pulmón Natural nos dio dignidad y poder para transformar nuestra realidad.
+                </p>
+        </div>
     </section>
     <section class="images">
         <img src="../images/quienesSomos/qs-1.jpg" alt="voluntario-1" class="image-design">
