--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
                 </p>
             </article>
     </section>
+    <div class="body-grid">
     <section> 
-        <article class="fondo-articulo">
+        <article>
             <h2>Nuestra Mision</h2>
                 <p class="p-central">
                     Queremos poder proteger, restaurar y conservar los espacios naturales a traves de   la    educacion ambiental, la accion comunitaria y proyectos sostenibles que  fortalezcan el  vinculo entre las personas y la naturaleza
@@ -81,6 +82,7 @@
         </article>
 
     </section>
+    </div>
     <a id="link-interno" href="./pages/donaciones.html" target="_blank"> Nos queres ayudar?</a>
       <a id="link-externo" href="./pages/voluntariado.html" target="_blank"> Te queres sumar?</a>
 
