--- a/pages/donaciones.html
+++ b/pages/donaciones.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -21,9 +22,6 @@
                         </li>
                         <li class="li-nav">    
                             <a class="nav-link" href="./educacionAmbiental.html">Educacion Ambiental</a>
-                        </li>
-                        <li class="li-nav">    
-                            <a class="nav-link" href="./voluntariado.html" >Voluntariado</a>
                         </li>
                         <li class="li-nav">    
                             <a class="nav-link" href="#">Donaciones</a>
