--- a/pages/educacionAmbiental.html
+++ b/pages/educacionAmbiental.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/styles.css">
+
     <title>Document</title>
 </head>
 <body>
@@ -23,9 +25,6 @@
                 <li class="li-nav">    
                     <a class="nav-link" href="#">Educacion Ambiental</a>
                 </li>
-                <li class="li-nav">    
-                    <a class="nav-link" href="./voluntariado.html" >Voluntariado</a>
-                </li>
                  <li class="li-nav">    
                     <a class="nav-link" href="./donaciones.html">Donaciones</a>
                 </li>
@@ -36,51 +35,45 @@
 
 <main>
 <!-- TENEMOS QUE UNIR CON section las diversas partes del codigo para que tengan ssentido -->
-    <section class="main-section"> 
+    
 
         <h1>Educacion Ambiental - Pulmon Natural</h1>
+<section class="testimonios-grid"> 
         <article>
             <h2>Aprender a cuidar</h2>
                 <p>
                     En <strong>Pulmon Natural</strong> creemos que la educaciion es la herramienta mas  poderosa para transformar la relaicon entre las personas y el medio ambiente. Por    eso, desarrollamos actividades y recursos para fomentar una conciencia ecologica     desde la infancia hasta la adultez
                 </p>
         </article>
-    </section>
+        <article>
+         <h2>Que hacemos?</h2>
+            <ul>
+                <li><p>Charlas en talleres y escuelas:</p>
+                    <p>Llevamos programas educativos a nivel inicial, primario y secundario. Adaptados a cada edad
+                    </p>    
+                </li>
 
-
-
-    <section> <!-- Estan en una misma seccion porque tienen mas relacion entre si -->
-
-
-
-    <h2>Que hacemos?</h2>
-        <ul>
-            <li>Charlas en talleres y escuelas:
-                <p>Llevamos programas educativos a nivel inicial, primario y secundario. Adaptados a cada edad
-                </p>    
-            </li>
-
-            <li>Capacitacion comunitaria:
-                <p> Ofrecemos cursos gratuitossobre reciclaje, compostaje, ahorro energetico y consumo responsable
-                 </p>   
-            </li>
-            <li>Recursos digitales:
-                <p> Creamos infografias, videos y guias practicas para docentes, estudiantes y familias
-                </p>
-            </li>
-            <li>Campañas informativas:
-                <p>
+                <li><p>Capacitacion comunitaria:</p>
+                    <p> Ofrecemos cursos gratuitossobre reciclaje, compostaje, ahorro energetico y consumo responsable
+                    </p>   
+                </li>
+                <li><p>Recursos digitales:</p>
+                    <p> Creamos infografias, videos y guias practicas para docentes, estudiantes y familias
+                    </p>
+                </li>
+                <li><p>Campañas informativas:</p>
+                     <p>
                     Organizamos actividades abiertas como ferias ambientales, eco-retos y jornadas tematicas
-                </p>
-            </li>
+                    </p>
+                </li>
 
-        </ul>
-        </section>
+            </ul>
+    </article>
 
-    <section>
+      <article>  
       <h2>Objetivos de nuestra educacion ambiental</h2>
-        <ul>
-            <li>
+        <ul class="ea-white">
+            <li >
                 Promover habitos sostenibles en la vida cotidiana.
             </li>
             <li>
@@ -93,10 +86,8 @@
                 Formar multiplicadores del pensamiento ecologico
             </li>
         </ul>
-    </section>
-    <section>
-        <div class="inversiones">
-            <article>
+    </article>
+    <article>
                 <h1>Comunicación para el Cambio Ambiental</h1>
                 <strong>Aprendé a contar historias poderosas que inspiren acción y movilicen a tu comunidad.</strong>
                 <h2>Objetivos</h2>
@@ -111,11 +102,8 @@
                             Capacitar en el manejo de la comunicación en situaciones de crisis o conflicto socioambiental.
                         </li>
                     </ul>
-            </article>
-
-        </div>
-        
-    </section>
+    </article>
+</section>
 
 
     <section>
