--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -31,10 +31,10 @@
 </header>
 
 <main>
+    <h1>Quienes Somos? - Pulmon Natural</h1>
     <section class="body-grid">
         <article class="texto-1">
-            <h1>Quienes Somos? - Pulmon Natural</h1>
-        
+            
             <h2>Nuestra historia</h2>
                 <p>
                     <strong>Pulmon Natural</strong> nacio del deseo de un grupo de personas comprometidas con el cuidado del medio ambiente y la justicia ecologica. Iniciamos como una pequeña iniciativa barrial y, con el tiempo, crecimos hasta convertirnos en una organizacion que impulsa proyectos ambientales de diversas comunidades 
@@ -47,16 +47,16 @@
             <h3>Nos dedicamos a: </h3>
             <ul>
                 <li>
-                    <strong> Restaurar espacios vrdes degradados </strong>
+                    <p><strong> Restaurar espacios vrdes degradados </strong></p>
                 </li>
                 <li>
-                    <strong>Pormover la educacion ambiental en escuelas y barrios</strong>                
+                    <p><strong>Pormover la educacion ambiental en escuelas y barrios</strong></p>                
                 </li>
                 <li>
-                    <strong>Organizar campañas de limpieza, reciclaje y plantacion de arboles</strong>   
+                    <p><strong>Organizar campañas de limpieza, reciclaje y plantacion de arboles</strong></p>
                 </li>
                 <li>                
-                    <strong> Fomentar el voluntariado ambiental como forma ciudadana </strong>            
+                    <p><strong> Fomentar el voluntariado ambiental como forma ciudadana </strong></p>            
             </li>
             </ul>
         </article>
@@ -83,7 +83,7 @@
                         <strong> "Hablo tres idiomas, y gracias a Pulmón Natural, descubrí que el   lenguaje más universal es el de la supervivencia."</strong>
                     </p>
                     <details>
-                        <summary>Ver más</summary>
+                        <summary><p>Conocela!</p></summary>
                         <div class=" animate__animated animate__fadeIn">
                             <p> Soy Lucía, traductora. Trabajé años en el mundo corporativo, pero   sentía    que me     faltaba un propósito. Al unirme a Pulmón Natural,    traduje   investigaciones   ambientales, como el uso de pesticidas     prohibidos, para     presentarlas ante la ONU.     Me convertí en un puente     entre ONGs de diferentes     continentes, traduciendo en   tiempo real  estrategias y logros. También     colaboré en “Voces del Planeta”,   ayudando   a que líderes indígenas     compartieran su mensaje en foros   internacionales. Descubrí    que mis palabras  podían tener impacto real.     Ahora traduzco para defender derechos y    conectar   luchas globales.  Pulmón Natural me ayudó a encontrar un propósito alineado        con mis     valores.</p>
 
