--- a/index.html
+++ b/index.html
@@ -78,26 +78,14 @@
         </article>
 
     </section>
-    </div>
-    <a id="link-interno" href="./pages/donaciones.html" target="_blank"> Nos queres ayudar?</a>
-      <a id="link-externo" href="./pages/voluntariado.html" target="_blank"> Te queres sumar?</a>
-
-
-    <section>
-        <h1>Pruebas</h1>
-        <details>
-                <summary>Ver más</summary>
-                <div class=" animate__animated animate__fadeIn">
-                <p>Este es el contenido oculto que se despliega al hacer clic. Puede contener texto, imágenes, listas o lo que necesites.</p>
-                </div>
-        </details>
-    </section>
-<!-- Con el target blank pasamos a una nueva pestaña y el usuario se queda en la pagina -->
 </main>
 <footer>
-    <div>
-        <p>TODOS LOS DERECHOS RESERVADOS  2025 </p>
-    </div>   
+    <section>
+        <h2>Queres conocernos mas?</h2>
+        <p>
+            Te invitamos a seguirnos en redes sociales, visitarnos a nuestras actividades o ecribirnos a contacto@pulmonnatural.org
+        </p>
+    </section>
 </footer>
 </body>
 </html>
