--- a/pages/donaciones.html
+++ b/pages/donaciones.html
@@ -99,9 +99,12 @@
 
 </main>
 <footer>
-        <div>
-            <p>TODOS LOS DERECHOS RESERVADOS</p>
-        </div>
+    <section>
+        <h2>Queres conocernos mas?</h2>
+            <p>
+                Te invitamos a seguirnos en redes sociales, visitarnos a nuestras actividades o ecribirnos a contacto@pulmonnatural.org
+            </p>
+    </section>
 </footer>
 
 
