--- a/pages/educacionAmbiental.html
+++ b/pages/educacionAmbiental.html
@@ -127,9 +127,12 @@
 </main>
 <footer>
 
-    <div>
-        <p>TODOS LOS DERECHOS RESERVADOS</p>
-    </div>   
+  <section>
+        <h2>Queres conocernos mas?</h2>
+        <p>
+            Te invitamos a seguirnos en redes sociales, visitarnos a nuestras actividades o ecribirnos a contacto@pulmonnatural.org
+        </p>
+    </section>
 </footer>
 </body>
 </html>
