--- a/index.html
+++ b/index.html
@@ -80,13 +80,37 @@
     </section>
 </main>
 <footer>
-    <section>
-        <h2>Queres conocernos mas?</h2>
-        <p>
-            Te invitamos a seguirnos en redes sociales, visitarnos a nuestras actividades o ecribirnos a contacto@pulmonnatural.org
-        </p>
-    </section>
-</footer>
+        <section>
+            <div class="container-fluid mt-5">
+                <div class="row">
+                    <div class="col-md-3 col-xl-3 footer-col">
+                        <h2>Sumate a nosotros!</h2>
+                        <p>Te esperamos!</p>
+                        <a href="#" class="boton-link" target="_blank">Ir al sitio</a>
+                    </div>
+                    <div class="col-md-3 col-xl-3 footer-col">
+                        <h2>Contactanos!</h2>
+                        <p>pulmonntural@gmail.com</p>
+                    </div>
+                    <div class="col-md-3 col-xl-3 footer-col">
+                        <h2>Informate</h2>
+                        <p>Suscríbete a nuestro boletín informativo para conocer más sobre la causa y cómo apoyar</p>
+                        <a href="#" class="boton-link" target="_blank">Suscribete!</a>
+                    </div>
+                    <div class="col-md-3 col-xl-3 footer-col">
+                        <h2>Mapa del sitio.</h2>
+                        <ul>
+                            <li><a href="#">home</a></li>
+                            <li><a href="./pages/quienesSomos.html">Quienes somos</a></li>
+                            <li><a href="./pages/educacionAmbiental.html">educacion ambiental</a></li>
+                            <li><a href="./pages/donaciones.html">Donaciones</a></li>
+                            <li><a href="./pages/proyectosActuales.html">Proyectos Actuales</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
 
