--- a/index.html
+++ b/index.html
@@ -16,27 +16,35 @@
 </head>
 <body>
 <header>
-    <img src="./images/logo.jpg" alt="Logo" class="logo">
-    
-            <nav>
-                <ul>
-                        <li class="li-nav">                   
-                            <a class="nav-link" href="#" >Home</a>
-                        </li>            
-                        <li class="li-nav">                    
-                            <a class="nav-link" href="./pages/quienesSomos.html">Quienes Somos</a>
-                        </li>                                
-                        <li class="li-nav">    
-                            <a class="nav-link" href="./pages/proyectosActuales.html">Proyectos Actuales</a>
-                        </li>
-                        <li class="li-nav">    
-                            <a class="nav-link" href="./pages/educacionAmbiental.html">Educacion Ambiental</a>
-                        </li>
-                        <li class="li-nav">    
-                            <a class="nav-link" href="./pages/donaciones.html">Donaciones</a>
-                        </li>
+    <nav class="navbar navbar-expand-lg nav-color">
+        <img src="./images/logo.jpg" alt="Logo" class="logo">
+        <div class="container-fluid">
+            <button class="navbar-toggler nav-hamburguesa" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon nav-icono"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav nav-mia">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item nav-li">
+                        <a class="nav-link" href="./pages/quienesSomos.html">Quienes Somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/proyectosActuales.html">Proyectos Actuales</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/educacionAmbiental.html">Educacion Ambiental</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/donaciones.html">Donaciones</a>
+                    </li>
                 </ul>
-            </nav>
+            </div>
+        </div>
+    </nav>
 </header>
  
 
@@ -98,7 +106,7 @@
                         <p>Suscríbete a nuestro boletín informativo para conocer más sobre la causa y cómo apoyar</p>
                         <a href="#" class="boton-link" target="_blank">Suscribete!</a>
                     </div>
-                    <div class="col-md-3 col-xl-3 footer-col">
+                    <div class="col-md-3 col-xl-3 footer-col mx-auto">
                         <h2>Mapa del sitio.</h2>
                         <ul>
                             <li><a href="#">home</a></li>
