--- a/pages/proyectosActuales.html
+++ b/pages/proyectosActuales.html
@@ -11,25 +11,35 @@
 </head>
 <body>
 <header>
-    <img src="../images/logo.jpg" alt="Logo" class="logo">
-    <nav>
-        <ul>
-                <li class="li-nav">                    
-                    <a class="nav-link" href="../index.html" >Home</a>
-                </li>            
-                <li class="li-nav">                    
-                    <a class="nav-link" href="./quienesSomos.html">Quienes Somos</a>
-                </li>                
-                <li class="li-nav">    
-                    <a class="nav-link" href="#">Proyectos Actuales</a>
-                </li>
-                <li class="li-nav">    
-                    <a class="nav-link" href="./educacionAmbiental.html">Educacion Ambiental</a>
-                </li>
-                 <li class="li-nav">    
-                    <a class="nav-link" href="./donaciones.html">Donaciones</a>
-                </li>
-        </ul>
+    
+        <nav class="navbar navbar-expand-lg nav-color">
+        <img src="./images/logo.jpg" alt="Logo" class="logo">
+        <div class="container-fluid">
+            <button class="navbar-toggler nav-hamburguesa" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon nav-icono"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav nav-mia">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./quienesSomos.html">Quienes Somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Proyectos Actuales</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./educacionAmbiental.html">Educacion Ambiental</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./donaciones.html">Donaciones</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 </header>
  
