--- a/pages/proyectosActuales.html
+++ b/pages/proyectosActuales.html
@@ -13,7 +13,7 @@
 <header>
     
         <nav class="navbar navbar-expand-lg nav-color">
-        <img src="./images/logo.jpg" alt="Logo" class="logo">
+        <img src="./images/logo.jpg" alt="logo-marca-pajaro" class="logo">
         <div class="container-fluid">
             <button class="navbar-toggler nav-hamburguesa" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -132,10 +132,10 @@
 
     </section>
     <section class="images">
-        <img src="../images/proyectos/proyect-1.jpg" alt="voluntario-1" class="image-design">
-        <img src="../images/proyectos/proyect-2.jpg" alt="voluntario-2" class="image-design">
-        <img src="../images/proyectos/proyect-3.jpg" alt="voluntario-3" class="image-design">
-        <img src="../images/proyectos/proyect-4.jpg" alt="voluntario-3" class="image-design">
+        <img src="../images/proyectos/proyect-1.jpg" alt="reciclaje-de-basura" class="image-design">
+        <img src="../images/proyectos/proyect-2.jpg" alt="calles-limpias" class="image-design">
+        <img src="../images/proyectos/proyect-3.jpg" alt="rio-limpio" class="image-design">
+        <img src="../images/proyectos/proyect-4.jpg" alt="animal-en-puerto" class="image-design">
 
     </section>
 
