--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-lg nav-color">
-        <img src="./images/logo.jpg" alt="Logo" class="logo">
+        <img src="./images/logo.jpg" alt="logo-marca-pajaro" class="logo">
         <div class="container-fluid">
             <button class="navbar-toggler nav-hamburguesa" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
