--- a/pages/donaciones.html
+++ b/pages/donaciones.html
@@ -12,7 +12,7 @@
 <body>
 <header>
    <nav class="navbar navbar-expand-lg nav-color">
-        <img src="./images/logo.jpg" alt="Logo" class="logo">
+        <img src="./images/logo.jpg" alt="logo-marca-pajaro" class="logo">
         <div class="container-fluid">
             <button class="navbar-toggler nav-hamburguesa" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -104,9 +104,9 @@
             </form>
     </section>
     <section class="images">
-        <img src="../images/donacion/donation-1.jpg" alt="voluntario-1" class="image-design">
-        <img src="../images/donacion/donation-2.jpg" alt="voluntario-2" class="image-design">
-        <img src="../images/donacion/donation-3.jpg" alt="voluntario-3" class="image-design">
+        <img src="../images/donacion/donation-1.jpg" alt="voluntario-invitando-a-donar" class="image-design">
+        <img src="../images/donacion/donation-2.jpg" alt="intercambio-de-dinero" class="image-design">
+        <img src="../images/donacion/donation-3.jpg" alt="dinero-siendo-ofrecido" class="image-design">
     </section>
 
 </main>
