--- a/pages/educacionAmbiental.html
+++ b/pages/educacionAmbiental.html
@@ -14,7 +14,7 @@
     
 <header>
    <nav class="navbar navbar-expand-lg nav-color">
-        <img src="./images/logo.jpg" alt="Logo" class="logo">
+        <img src="./images/logo.jpg" alt="logo-marca-pajaro" class="logo">
         <div class="container-fluid">
             <button class="navbar-toggler nav-hamburguesa" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -132,9 +132,9 @@
 
     <h1>"Educar es sembrar conciencia, y cada conciencia es una semilla para el planeta"</h1>
     <section class="images">
-        <img src="../images/educacionAmbiental/ambientalEduc-1.jpg" alt="voluntario-1" class="image-design">
-        <img src="../images/educacionAmbiental/ambientalEduc-2.jpg" alt="voluntario-2" class="image-design">
-        <img src="../images/educacionAmbiental/ambientalEduc-3.jpg" alt="voluntario-3" class="image-design">
+        <img src="../images/educacionAmbiental/ambientalEduc-1.jpg" alt="voluntario-en-aula" class="image-design">
+        <img src="../images/educacionAmbiental/ambientalEduc-2.jpg" alt="niños-felices" class="image-design">
+        <img src="../images/educacionAmbiental/ambientalEduc-3.jpg" alt="niños-aprendiendo" class="image-design">
     </section>
 </main>
 <footer>
