--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -13,7 +13,7 @@
 <header>
     
         <nav class="navbar navbar-expand-lg nav-color">
-        <img src="./images/logo.jpg" alt="Logo" class="logo">
+        <img src="./images/logo.jpg" alt="logo-marca-pajaro" class="logo">
         <div class="container-fluid">
             <button class="navbar-toggler nav-hamburguesa" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -148,9 +148,9 @@
  </section>
     
     <section class="images">
-        <img src="../images/quienesSomos/qs-1.jpg" alt="voluntario-1" class="image-design">
-        <img src="../images/quienesSomos/qs-2.jpg" alt="voluntario-2" class="image-design">
-        <img src="../images/quienesSomos/qs-3.jpg" alt="voluntario-3" class="image-design">
+        <img src="../images/quienesSomos/qs-1.jpg" alt="voluntairos-planificando" class="image-design">
+        <img src="../images/quienesSomos/qs-2.jpg" alt="voluntarios-poniendose-de-acuerdo" class="image-design">
+        <img src="../images/quienesSomos/qs-3.jpg" alt="voluntarios-al-aire-libre" class="image-design">
     </section>
 </main>
 <footer>
