--- a/pages/proyectosActuales.html
+++ b/pages/proyectosActuales.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Transformamos la preocupación en acción. Explorá nuestros proyectos ambientales y mirá en tiempo real cómo estamos construyendo una Argentina más limpia y sostenible">
     <!-- BOOSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+        <!-- CSS -->
     <link rel="stylesheet" href="../styles/styles.css">
     <title>Document</title>
 </head>
@@ -126,7 +128,7 @@
     <section>
             <h2>Queres sumarte?</h2>
             <p>
-                Muchos de nuestros proyectos estan abiertos a voluntarios. Visita la seccion de <a href="./quienesSomos.html">Quienes Somos</a> o escribinos a proyectos@pulmonnatural.org para colaborar
+                Muchos de nuestros proyectos estan abiertos a voluntarios. Visita la seccion de <a href="./quienesSomos.html" class="boton-qs">Quienes Somos</a> o escribinos a proyectos@pulmonnatural.org para colaborar
 
             </p>
 
