--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <meta name="description" content="Conocé a las personas que transforman la basura en recursos y los baldíos en vida. La historia de Pulmón Natural es la historia de sus voluntarios. ¡Inspirate!">
     <!-- BOOSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+        <!-- CSS -->
+    <link rel="stylesheet" href="../styles/styles.css">
+    
     <title>Document</title>
 </head>
 <body>
