--- a/pages/educacionAmbiental.html
+++ b/pages/educacionAmbiental.html
@@ -16,7 +16,7 @@
     
 <header>
    <nav class="navbar navbar-expand-lg nav-color">
-        <img src="./images/logo.jpg" alt="logo-marca-pajaro" class="logo">
+        <img src="../images/logo.jpg" alt="logo-marca-pajaro" class="logo">
         <div class="container-fluid">
             <button class="navbar-toggler nav-hamburguesa" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -88,32 +88,32 @@
       <h2>Objetivos de nuestra educacion ambiental</h2>
         <ul class="ea-white">
             <li >
-                Promover habitos sostenibles en la vida cotidiana.
+                <p>Promover habitos sostenibles en la vida cotidiana.</p>
             </li>
             <li>
-                Conectar a las personas con la naturaleza desde el conocimiento
+                <p>Conectar a las personas con la naturaleza desde el conocimiento</p>
             </li>
             <li>
-                Fomentar el pensamiento critico y el compromiso con el entorno
+                <p>Fomentar el pensamiento critico y el compromiso con el entorno</p>
             </li>
             <li>
-                Formar multiplicadores del pensamiento ecologico
+                <p>Formar multiplicadores del pensamiento ecologico</p>
             </li>
         </ul>
     </article>
     <article>
                 <h1>Comunicación para el Cambio Ambiental</h1>
-                <strong>Aprendé a contar historias poderosas que inspiren acción y movilicen a tu comunidad.</strong>
+                <p><strong>Aprendé a contar historias poderosas que inspiren acción y movilicen a tu comunidad.</strong></p>
                 <h2>Objetivos</h2>
                     <ul>
                         <li>
-                            Dotar a los participantes de herramientas de storytelling para transformar datos duros y problemas complejos en narrativas humanas y emocionantes.
+                            <p>Dotar a los participantes de herramientas de storytelling para transformar datos duros y problemas complejos en narrativas humanas y emocionantes.</p>
                         </li>
                         <li> 
-                            Enseñar estrategias de comunicación digital para campañas de concientización y recaudación de fondos.
+                            <p>Enseñar estrategias de comunicación digital para campañas de concientización y recaudación de fondos.</p>
                         </li>
                         <li>
-                            Capacitar en el manejo de la comunicación en situaciones de crisis o conflicto socioambiental.
+                            <p>Capacitar en el manejo de la comunicación en situaciones de crisis o conflicto socioambiental.</p>
                         </li>
                     </ul>
     </article>
