--- a/pages/proyectosActuales.html
+++ b/pages/proyectosActuales.html
@@ -15,7 +15,7 @@
 <header>
     
         <nav class="navbar navbar-expand-lg nav-color">
-        <img src="./images/logo.jpg" alt="logo-marca-pajaro" class="logo">
+        <img src="../images/logo.jpg" alt="logo-marca-pajaro" class="logo">
         <div class="container-fluid">
             <button class="navbar-toggler nav-hamburguesa" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -137,7 +137,7 @@
         <img src="../images/proyectos/proyect-1.jpg" alt="reciclaje-de-basura" class="image-design">
         <img src="../images/proyectos/proyect-2.jpg" alt="calles-limpias" class="image-design">
         <img src="../images/proyectos/proyect-3.jpg" alt="rio-limpio" class="image-design">
-        <img src="../images/proyectos/proyect-4.jpg" alt="animal-en-puerto" class="image-design">
+        
 
     </section>
 
