--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -16,7 +16,7 @@
 <header>
     
         <nav class="navbar navbar-expand-lg nav-color">
-        <img src="./images/logo.jpg" alt="logo-marca-pajaro" class="logo">
+        <img src="../images/logo.jpg" alt="logo-marca-pajaro" class="logo">
         <div class="container-fluid">
             <button class="navbar-toggler nav-hamburguesa" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
