--- a/pages/educacionAmbiental.html
+++ b/pages/educacionAmbiental.html
@@ -10,7 +10,7 @@
      <!-- CSS -->
     <link rel="stylesheet" href="../styles/styles.css">
 
-    <title>Document</title>
+    <title>Educacion Ambiental | PM</title>
 </head>
 <body>
     
