--- a/pages/quienesSomos.html
+++ b/pages/quienesSomos.html
@@ -10,7 +10,7 @@
         <!-- CSS -->
     <link rel="stylesheet" href="../styles/styles.css">
     
-    <title>Document</title>
+    <title>Quienes somos | PM</title>
 </head>
 <body>
 <header>
