--- a/pages/proyectosActuales.html
+++ b/pages/proyectosActuales.html
@@ -9,7 +9,7 @@
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
         <!-- CSS -->
     <link rel="stylesheet" href="../styles/styles.css">
-    <title>Document</title>
+    <title>Proyctos Actuales | PM</title>
 </head>
 <body>
 <header>
